@@ -199,6 +199,7 @@ void InitConnection(NewSocket *ns, uint32 from)
     ns->facecache = 0;
     ns->sound = 0;
     ns->skillexp = 0;
+    ns->map1cmd = 0;
     ns->status = Ns_Add;
     ns->comment = NULL;
     ns->old_mode = 0;
